<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <ProgressBar
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_centerHorizontal="true"
      android:id="@+id/top_ten_songs_progressBar"
      android:visibility="gone"
      />

  <android.support.v4.widget.SwipeRefreshLayout
      android:id="@+id/top_ten_songs_list_swipe"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_ten_songs_list_container"
        android:layout_marginTop="@dimen/top_ten_songs_list_margin_top"
        android:overScrollMode="never"
        />
  </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>